gl33-master/src/test/deca/syntax/invalid/others/whileFausse.deca
/*
Test sur le syntaxe de while

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

{
  boolean a = true;
  whule(a){
    print("hello");
  }
}
